Fix add points, camera alignment and redirect to retrieve page

--- a/webcamStyle.css
+++ b/webcamStyle.css
@@ -1,4 +1,4 @@
-#my_camera{
+#my_camera1{
   width: 320px;
   height: 240px;
   border: 1px solid black;
